--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-MONGO_URI = mongodb+srv://admin:admin@cluster0.fm4nrkl.mongodb.net/?appName=Cluster0
+MONGO_URI = mongodb+srv://admin:admin@cluster0.fm4nrkl.mongodb.net/Proyecto-Intermodular?retryWrites=true&w=majority
