--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.3",
-    "nanoid": "^5.1.6",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.11"
   }
 }
