--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "examen_eval_dam",
+  "name": "proyecto-intermodular-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
